# hydraulic-engine

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
scripts/: database_example_epanet.py  sensorthings_example_epanet.py  sensorthings_example_swmm.py  update_inp_example_epanet.py
src/hydraulic_engine/: __init__.py  exceptions.py
src/hydraulic_engine/config/: __init__.py  config.py
src/hydraulic_engine/epanet/: __init__.py  bin_handler.py  file_handler.py  inp_handler.py  models.py  rpt_handler.py  runner.py
src/hydraulic_engine/swmm/: __init__.py  file_handler.py  inp_handler.py  models.py  out_handler.py  result_handler.py  rpt_handler.py  runner.py
src/hydraulic_engine/utils/: __init__.py  enums.py  tools_api.py  tools_config.py  tools_db.py  tools_log.py  tools_os.py  tools_sensorthings.py
tests/: conftest.py  test_connection.py  test_epanet.py  test_package.py  test_swmm.py
tests/data/: .gitkeep
